--- a/themes/hugo-academic/data/themes/custom.toml
+++ b/themes/hugo-academic/data/themes/custom.toml
@@ -17,5 +17,5 @@ menu_title = "#fff"
 
 # Backgrounds
 background = "#fff"
-home_section_odd = "#fff"
+home_section_odd = "#000000"
 home_section_even = "#f7f7f7"
