--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -20,7 +20,9 @@ copyright = ""
 ############################
 
 # Name of Academic theme folder in `themes/`.
-theme = "academic"
+#theme = "academic"
+theme = "custom"
+
 
 # Get last modified date for content from Git?
 enableGitInfo = false
