--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -20,8 +20,8 @@ copyright = ""
 ############################
 
 # Name of Academic theme folder in `themes/`.
-#theme = "academic"
-theme = "custom"
+#theme = "hugo-academic"
+
 
 
 # Get last modified date for content from Git?
