--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -10,7 +10,7 @@
 #   Browse built-in themes in `themes/academic/data/themes/`
 #   Browse user installed themes in `data/themes/`
 #theme = "minimal"
-theme = "custom"
+theme = "coffee"
 
 # Enable users to switch between day and night mode?
 day_night = true
