--- a/data/themes/custom.toml
+++ b/data/themes/custom.toml
@@ -16,6 +16,6 @@ menu_text_active = "#328cc1"
 menu_title = "#fff"
 
 # Backgrounds
-background = "#fff"
+background = "#132B37"
 home_section_odd = "#fff"
 home_section_even = "#f7f7f7"
