--- a/data/themes/custom.toml
+++ b/data/themes/custom.toml
@@ -18,4 +18,4 @@ menu_title = "#fff"
 # Backgrounds
 background = "#132B37"
 home_section_odd = "#132B37"
-home_section_even = "#f7f7f7"
+home_section_even = "#2a2b24"
