--- a/data/themes/custom.toml
+++ b/data/themes/custom.toml
@@ -7,7 +7,7 @@ dark = true
 # Primary
 primary = "#328cc1"
 primary_light = "#328cc1"
-primary_dark = "#DA2536"
+primary_dark = "#FFC343"
 
 # Menu
 menu_primary = "#494949"
