--- a/data/themes/custom.toml
+++ b/data/themes/custom.toml
@@ -5,7 +5,7 @@ name = "custom"
 dark = true
 
 # Primary
-primary = "#328cc1"
+primary = "#FFC343"
 primary_light = "#328cc1"
 primary_dark = "#FFC343"
 
