--- a/data/themes/custom.toml
+++ b/data/themes/custom.toml
@@ -10,7 +10,7 @@ primary_light = "#328cc1"
 primary_dark = "#FFC343"
 
 # Menu
-menu_primary = "#494949"
+menu_primary = "#307ABE"
 menu_text = "#fff"
 menu_text_active = "#328cc1"
 menu_title = "#fff"
@@ -19,3 +19,7 @@ menu_title = "#fff"
 background = "#132B37"
 home_section_odd = "#132B37"
 home_section_even = "#193A4B"
+
+#The “Primary” section changes the color of links and icons depending on whether you want a dark or light-colored theme.
+#The “Menu” section changes the colors in the top menu bar. 
+#The “Backgrounds” section changes the color of the section panels on the first page.
