--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -20,12 +20,12 @@
 
 [[main]]
   name = "Publications"
-  url = "#featured"
+  url = "#publications"
   weight = 40
 
 [[main]]
-  name = "Contact"
-  url = "#contact"
+  name = "Gallery"
+  url = "#slider"
   weight = 60
 
 # Link to a PDF of your resume/CV from the menu.
